--- a/machine_learning/2020.09.22.ipynb
+++ b/machine_learning/2020.09.22.ipynb
@@ -167,9 +167,29 @@
     }
    ],
    "source": [
-    "train['Gender'] = np.where(train.Sex=='male',True,False)\n",
-    "test['Gender'] = np.where(test.Sex=='male',True,False)\n",
+    "train['Gender']=train.Sex=='male'\n",
+    "test['Gender']=test.Sex=='male'\n",
     "train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27.915708812260537"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Age[train.Sex!='male'].mean()\n"
    ]
   },
   {
