--- a/machine_learning/2020.09.22.ipynb
+++ b/machine_learning/2020.09.22.ipynb
@@ -31,21 +31,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(891, 12)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train = pd.read_csv(filepath+'train.csv')\n",
-    "train.shape"
+    "test = pd.read_csv(filepath+'test.csv')"
    ]
   },
   {
@@ -56,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "(418, 11)"
+       "(891, 12)"
       ]
      },
      "execution_count": 4,
@@ -65,8 +54,14 @@
     }
    ],
    "source": [
-    "test = pd.read_csv(filepath+'test.csv')\n",
-    "test.shape"
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Sex 컬럼 이분화 : True / False 한 Gender 컬럼 생성__"
    ]
   },
   {
@@ -173,23 +168,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27.915708812260537"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train.Age[train.Sex!='male'].mean()\n"
+    "__Age 컬럼 결측값 각 성별 평균으로 대체한 Age_mean 컬럼 생성__"
    ]
   },
   {
@@ -209,9 +191,16 @@
     }
    ],
    "source": [
-    "train['Age_mean'] = train.Age.where(train.Age.notnull(),train.Age.mean())\n",
-    "test['Age_mean'] = test.Age.where(test.Age.notnull(),test.Age.mean())\n",
+    "train['Age_mean'] = train.apply(lambda x:x.Age if pd.notnull(x.Age) else train.groupby(['Sex'])['Age'].mean()[x.Sex] , axis=1)\n",
+    "test['Age_mean'] = test.apply(lambda x:x.Age if pd.notnull(x.Age) else test.groupby(['Sex'])['Age'].mean()[x.Sex] , axis=1)\n",
     "test['Age_mean'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Embarked , Pclass 컬럼을 원핫인코딩한 컬럼들 추가__"
    ]
   },
   {
@@ -220,64 +209,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train['Embarked_S'] = train['Embarked']=='S'\n",
-    "train['Embarked_C'] = train['Embarked']=='C'\n",
-    "train['Embarked_Q'] = train['Embarked']=='Q'\n",
-    "test['Embarked_S'] = test['Embarked']=='S'\n",
-    "test['Embarked_C'] = test['Embarked']=='C'\n",
-    "test['Embarked_Q'] = test['Embarked']=='Q'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train['Pclass1'] = train['Pclass']==1\n",
-    "train['Pclass2'] = train['Pclass']==2\n",
-    "train['Pclass3'] = train['Pclass']==3\n",
-    "test['Pclass1'] = test['Pclass']==1\n",
-    "test['Pclass2'] = test['Pclass']==2\n",
-    "test['Pclass3'] = test['Pclass']==3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "fn = ['Gender', 'Age_mean','Embarked_S', 'Embarked_C', 'Embarked_Q','Pclass1', 'Pclass2', 'Pclass3']\n",
-    "xTrain = train[fn]\n",
-    "yLabel = train['Survived']\n",
-    "xTest = test[fn]\n",
-    "\n",
-    "\n",
-    "\n",
-    "model = DecisionTreeClassifier(max_depth=len(fn)//2,random_state=2020)\n",
-    "model.fit(xTrain,yLabel)\n",
-    "prediction = model.predict(xTest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test['Survived']=prediction\n",
-    "res = test[['PassengerId','Survived']]\n",
-    "res.to_csv('mysubmit_0922.csv',index=False)"
+    "train = pd.concat([train,pd.get_dummies(train.Embarked,prefix='Embarked'),pd.get_dummies(train.Pclass,prefix='Pclass')], axis=1)\n",
+    "test = pd.concat([test,pd.get_dummies(test.Embarked,prefix='Embarked'),pd.get_dummies(test.Pclass,prefix='Pclass')], axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
+    "__DT 모델 생성 및 예측파일 저장__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "fn = ['Gender', 'Age_mean','Embarked_S', 'Embarked_C', 'Embarked_Q','Pclass_1', 'Pclass_2', 'Pclass_3']\n",
+    "xTrain = train[fn]\n",
+    "yLabel = train['Survived']\n",
+    "xTest = test[fn]\n",
+    "\n",
+    "model = DecisionTreeClassifier(max_depth=len(fn)//2,random_state=2020)\n",
+    "model.fit(xTrain,yLabel)\n",
+    "prediction = model.predict(xTest)\n",
+    "\n",
+    "test['Survived']=prediction\n",
+    "res = test[['PassengerId','Survived']]\n",
+    "res.to_csv('mysubmit_0922.csv',index=False)\n",
+    "print('File saved')"
    ]
   }
  ],
